--- a/chatpython-master/requirements.txt
+++ b/chatpython-master/requirements.txt
@@ -1,9 +1,5 @@
-
-Django==3.2.5
-
-sqlparse==0.4.1
 arabic-reshaper==2.1.1
-
+asgiref==3.3.0
 astroid==2.4.2
 autopep8==1.4.4
 beautifulsoup4==4.9.3
@@ -12,7 +8,7 @@ certifi==2020.6.20
 chardet==3.0.4
 colorama==0.4.4
 dj-database-url==0.5.0
-
+Django==2.0
 django-versatileimagefield==2.0
 django-widget-tweaks==1.4.1
 djangorestframework==3.7.3
